[package]
name = "rev-orp"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web= "4"
awc = "3.6.0"
chrono = "0.4.41"
serde = {version = "1.0.219", features = ["derive"]}
rand = "0.8"
uuid = { version = "1.3", features = ["v4"] }
once_cell = "1.17"
time = "0.3"
futures = "0.3"
bytes = "1.0"
